# python_config_example

./: .gitignore  README.md  config_direct_import.toml  config_example.py  config_python.py  flake.nix  pyproject.toml
config/: __init__.py  config_module_import_2.toml
